--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -710,5 +710,6 @@
     <string name="hide_all_news_msg">Вы действительно хотите отметить все новости в ленте как прочитанные?</string>
     <string name="hide_news">Скрыть новости</string>
     <string name="no_news">Новостей нет</string>
+    <string name="url_not_avaible">Адрес недоступен</string>
 
 </resources>
