--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -712,5 +712,6 @@
     <string name="no_news">Новостей нет</string>
     <string name="url_not_avaible">Адрес недоступен</string>
     <string name="error_auth_fb_message">Не удалось авторизоваться по причине: %s .Попробуйте повторить операцию позже</string>
+    <string name="error_expired_access_token">Не удалось пройти авторизацию. Пройдите авторизацию заново</string>
 
 </resources>
