--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -713,5 +713,7 @@
     <string name="url_not_avaible">Адрес недоступен</string>
     <string name="error_auth_fb_message">Не удалось авторизоваться по причине: %s .Попробуйте повторить операцию позже</string>
     <string name="error_expired_access_token">Не удалось пройти авторизацию. Пройдите авторизацию заново</string>
+    <string name="auth_error_code_msg_423">Слишком много попыток авторизации.\nЗабыли пароль? Воспользуйтесь сервисом восстановления пароля.</string>
+    <string name="restore">Восстановить</string>
 
 </resources>
