--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -727,5 +727,7 @@
     <string name="informer_message_about_new_version">Доступна новая версия %s, перейдите в магазин приложений и узнайте о новых возможностях</string>
     <string name="update_app">Обновите приложение</string>
     <string name="update">обновить</string>
+    <string name="ag_hint_code">Код</string>
+    <string name="code_confirm_send">Отправить</string>
 
 </resources>
