--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -728,6 +728,10 @@
     <string name="update_app">Обновите приложение</string>
     <string name="update">обновить</string>
     <string name="ag_hint_code">Код</string>
-    <string name="code_confirm_send">Отправить</string>
+    <string name="code_confirm_send">Подтвердить</string>
+    <string name="get_permission">Для корректной работы приложения необходимо предоставить некоторые разрешения разрешения</string>
+    <string name="help_phone_not_correct">Неправильный номер?</string>
+    <string name="hint_sms_sent">Мы отправили SMS с кодом на ваш номер</string>
+    <string name="tutorial_cancel">Завершить</string>
 
 </resources>
