--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -724,7 +724,7 @@
     <string name="tutorial_description_3">Следите за голосованиями и новостями нашего города</string>
     <string name="tutorial_skip">Пропустить</string>
     <string name="tutorial_next">Продолжить</string>
-    <string name="informer_message_about_new_version">Доступна новая версия %s, перейдите в магазин приложений и узнайте о новых возможностях</string>
+    <string name="informer_message_about_new_version">Доступна новая версия %s, перейдите в магазин приложений и узнайте о новых возможностях!</string>
     <string name="update_app">Обновите приложение</string>
     <string name="update">обновить</string>
     <string name="ag_hint_code">Код</string>
@@ -737,5 +737,6 @@
     <string name="ag_agree">я согласен с</string>
     <string name="offerta_offer">условиями оферты</string>
     <string name="title_less">Свернуть</string>
+    <string name="get_permission_sms">Для автоматического чтения кода  из СМС при авторизации и регистрации необходимо предоставить разрешение</string>
 
 </resources>
