правки по геотаргетингу

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -329,7 +329,7 @@
     <string name="distance_km">%s км</string>
     <string name="location_provader_network">Сеть</string>
     <string name="location_provader_GPS">ГПС</string>
-    <string name="location_provaders_are_not_available">Для работы экрана \"Мероприятие\" требуется включить в настройках функцию определения местоположения</string>
+    <string name="location_provaders_are_not_available">Для корретной работы приложения требуется включить в настройках функцию определения местоположения</string>
     <string name="turn_on">Включить</string>
     <string name="action_current_points">Начисленные баллы</string>
     <string name="action_credit_points">Потраченные баллы</string>
