--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -740,5 +740,8 @@
     <string name="get_permission_sms">Для автоматического чтения кода  из СМС при авторизации и регистрации необходимо предоставить разрешение</string>
     <string name="auth_error_confirm_code_not_correct">Неверный код подтверждения</string>
     <string name="permission_camera_gallery">Для корректной работы необходимо предоставить доступ к камере и внутренней памяти устройства</string>
+    <string name="crop_image_menu_crop">Вырезать</string>
+    <string name="crop_image_menu_flip_horizontally">Перевернуть по горизонтали</string>
+    <string name="crop_image_menu_flip_vertically">Перевернуть по вертикали</string>
 
 </resources>
