--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -750,4 +750,5 @@
     <string name="contact_info_title">Контактная информация</string>
     <string name="full_user_name_title">ФИО</string>
     <string name="menu_confirm">подтвердить</string>
+    <string name="mainmenu_friends">Мои друзья</string>
 </resources>
