ввод данных пользователя

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -749,5 +749,6 @@
     <string name="edit_profile">Редактирование профиля</string>
     <string name="contact_info_title">Контактная информация</string>
     <string name="full_user_name_title">ФИО</string>
+    <string name="childs">Дети</string>
     <string name="menu_confirm">подтвердить</string>
 </resources>
