правки по шрифтам и разметке диалоговое окно выбора аватар

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -771,4 +771,7 @@
     <string name="menu_confirm">подтвердить</string>
     <string name="mainmenu_friends">Мои друзья</string>
     <string name="kids_birthdays">Возраст детей</string>
+    <string name="avatar_sources_title">Выберите источник фотографии</string>
+    <string name="src_gallery">ГАЛЕРЕЯ</string>
+    <string name="src_camera">КАМЕРА</string>
 </resources>
