рефакторинг фрамегнтов профиля

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -778,4 +778,5 @@
     <string name="flat_title_registration">Адрес регистрации</string>
     <string name="flat_title_residence">Адрес проживания</string>
     <string name="flat_title_work">Адрес работы</string>
+    <string name="flat_residence_equal_flat_registration">Адрес проживания совпадает с адресом регистрации</string>
 </resources>
