refs #88986 правки по задаче, подключен сервис добавления в друзья, добавлена бизнес логика

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -780,4 +780,6 @@
     <string name="flat_title_work">Адрес работы</string>
     <string name="flat_residence_equal_flat_registration">Адрес проживания совпадает с адресом регистрации</string>
     <string name="profile_filled_title" formatted="false">профиль заполнен на %d%%</string>
+    <string name="mainmenu_friends_title">Друзья</string>
+    <string name="permission_contacts">Для поиска друзей требуется предоставить доступ к контактам</string>
 </resources>
