отладка работы бейджей друзей, вцелом отлажено, из-за работы сервисов наблюдается нестабильная работа

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -785,4 +785,5 @@
     <string name="connection_mos_pgu_title">Связь с mos.ru</string>
     <string name="connection_mos_pgu_connected">установлена</string>
     <string name="title_item_add_friend">Добавить друга</string>
+    <string name="profile_title">Профиль</string>
 </resources>
