--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -789,6 +789,6 @@
     <string name="title_item_add_friend">Добавить друга</string>
     <string name="profile_title">Профиль</string>
     <string name="friend_profile_invisible">Пользователь скрыл свои данные</string>
-    <string name="success_send_sms">СМС \"%s\" успешно отправлено</string>
-    <string name="error_send_sms">К сожалению, не удалось отправить СМС \"%s\"</string>
+    <string name="success_send_sms">СМС \"%s\" успешно доставлено</string>
+    <string name="error_send_sms">К сожалению, не удалось доставить СМС \"%s\"</string>
 </resources>
