--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -435,8 +435,9 @@
     <string name="support_progress_message">Отправка сообщения..</string>
     <string name="email_un_correct">Некорректный формат введенного адреса электронной почты, отправка сообщения невозможна</string>
     <string name="title_add_address">Адрес</string>
-    <string name="pgu_auth_message">Для того, чтобы участвовать в публичных слушаниях, вы должны иметь верифицированный адрес регистрации.\n\nВведите данные вашей учетной записи на mos.ru для проверки наличия верифицированного адреса регистрации</string>
-    <string name="pgu_hint_email">Псевдоним</string>
+    <!--<string name="pgu_auth_message">Для того, чтобы участвовать в публичных слушаниях, вы должны иметь верифицированный адрес регистрации.\n\nВведите данные вашей учетной записи на mos.ru для проверки наличия верифицированного адреса регистрации</string>-->
+    <string name="pgu_auth_message">Для того, чтобы участвовать в публичных слушаниях или других юридически значимых голосованиях, вы должны иметь верифицированный адрес регистрации.\n\nУстановите связь с вашим профилем на mos.ru для проверки наличия верифицированного адреса регистрации.</string>
+    <string name="pgu_hint_email">Логин (псевдоним)</string>
     <string name="pgu_hint_password">Пароль</string>
     <string name="rempte_service_not_work">Ошибка удаленного сервиса</string>
     <string name="date_soon">Cкоро</string>
@@ -522,7 +523,7 @@
     <string name="error_short_editing_blocked">Смена адреса заблокирована.</string>
     <string name="warning_editing_blocked">Просим вас внимательно отнестись к заполнению адреса. Изменить сохраненный адрес можно только один раз в течение трех месяцев</string>
     <string name="hint_not_auth_pgu">Мы не сохраняем пароль и используем его только для установки связи между профилями</string>
-    <string name="pgu_rebind">Связать с другим профилем</string>
+    <string name="pgu_rebind">Связать с другим профилем?</string>
     <string name="select">Выбрать</string>
     <string name="clear">Очистить</string>
     <string name="title_thanks">Спасибо!</string>
@@ -555,8 +556,8 @@
     <string name="questions_and_answers">Помощь и ответы на вопросы</string>
     <string name="go_to_pgu_mos_ru">Перейти на mos.ru</string>
     <string name="pgu_link_questions_and_answers">http://ag.mos.ru/pgu</string>
-    <string name="state_pgu_disconnected">Профили не связаны</string>
-    <string name="state_pgu_connected">Профили связаны</string>
+    <string name="state_pgu_disconnected">профили не связаны</string>
+    <string name="state_pgu_connected">профили связаны</string>
     <string name="title_rate_this_app">Оцените приложение</string>
     <string name="count_symbols" formatted="false">%s/%s</string>
     <string name="warning_post_mutch_long">Сократите сообщение до %s символов!</string>
