--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -795,4 +795,7 @@
     <string name="error_send_sms">К сожалению, не удалось доставить СМС \"%s\"</string>
     <string name="title_dialog_edit_profile">Вы хотите перейти в режим редактирования данных?</string>
     <string name="empty_achievement_list">Информации по достижениям нет</string>
+    <string name="social_status_title">Род деятельности</string>
+    <string name="marital_status_title">Семейное положение</string>
+    <string name="gender_status_title">Пол</string>
 </resources>
