--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -803,4 +803,5 @@
     <string name="social_status_title">Род деятельности</string>
     <string name="marital_status_title">Семейное положение</string>
     <string name="gender_status_title">Пол</string>
+    <string name="property_addresses">Адреса собственности</string>
 </resources>
