--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -805,4 +805,5 @@
     <string name="gender_status_title">Пол</string>
     <string name="property_addresses">Адреса собственности</string>
     <string name="sources_poll">Источники голосований</string>
+    <string name="addresses_info">Для того чтобы участвовать в голосовании собственников многоквартирных домов, вам необходимо добавить адреса, по которым вы владеете собственностью.</string>
 </resources>
