--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -807,4 +807,5 @@
     <string name="sources_poll">Источники голосований</string>
     <string name="addresses_info">Для того, чтобы участвовать в голосовании собственников многоквартирных домов, вам необходимо добавить адреса, по которым вы владеете собственностью.</string>
     <string name="address_property">Адрес собственности</string>
+    <string name="default_no_internet_err">Отсутствует подключение к интернету, проверьте настройки соединения</string>
 </resources>
