--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,7 +178,7 @@
 
     <string-array name="child_birthdays_hints">
         <item>первого</item>
-        <item>Второго</item>
+        <item>второго</item>
         <item>третьего</item>
         <item>четвертого</item>
         <item>пятого</item>
