refs #98004 - выполнено + правка бага выбора семейного положения

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -807,4 +807,9 @@
     <string name="sources_poll">Источники голосований</string>
     <string name="addresses_info">Для того, чтобы участвовать в голосовании собственников многоквартирных домов, вам необходимо добавить адреса, по которым вы владеете собственностью.</string>
     <string name="address_property">Адрес собственности</string>
+    <string name="non_selected">Не указано</string>
+    <string name="non_selected_male">Не указан</string>
+    <string name="non_selected_female">Не указана</string>
+    <string name="non_selected_many">Не указаны</string>
+
 </resources>
