--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -814,5 +814,5 @@
     <string name="non_selected_many">Не указаны</string>
     <string name="achievement_tab_title">Достижение</string>
     <string formatted="false" name="remove_addresses_dialog_message">Удалить адрес собственности \"%s\"?</string>
-
+    <string name="empty_flat_error">Некорректный адрес</string>
 </resources>
